Updated with pager at bottom of content

--- a/cookbook/custom-404-page-handling/index.html
+++ b/cookbook/custom-404-page-handling/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../route-specific-pipeline/">
+                        <a rel="prev" href="../route-specific-pipeline/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../using-custom-view-helpers/">
+                        <a rel="next" href="../using-custom-view-helpers/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -581,7 +581,20 @@ instance:</p>
   used the <code>ApplicationFactory</code>).</li>
 </ul>
 <p>This is to ensure that the <code>NotFound</code> middleware executes <em>after</em> any routed
-middleware, as you only want it to execute if no routed middleware was selected.</p></div>
+middleware, as you only want it to execute if no routed middleware was selected.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../route-specific-pipeline/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../using-custom-view-helpers/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
