--- a/cookbook/debug-toolbars/index.html
+++ b/cookbook/debug-toolbars/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../setting-locale-without-routing-parameter/">
+                        <a rel="prev" href="../setting-locale-without-routing-parameter/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../using-routed-middleware-class-as-controller/">
+                        <a rel="next" href="../using-routed-middleware-class-as-controller/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -550,7 +550,20 @@ return [
 not <code>middleware-pipeline.global.php</code>. This ensures that the toolbar is only
 enabled in the local environment, and not committed to your production
 settings.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../setting-locale-without-routing-parameter/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../using-routed-middleware-class-as-controller/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
