--- a/cookbook/modular-layout/index.html
+++ b/cookbook/modular-layout/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../using-a-base-path/">
+                        <a rel="prev" href="../using-a-base-path/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../setting-locale-depending-routing-parameter/">
+                        <a rel="next" href="../setting-locale-depending-routing-parameter/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -611,7 +611,20 @@ instead of parsing and merging the various configuration sources.</p>
 <li>If cached config is found, <code>ConfigManager</code> does not iterate over provider list.</li>
 </ul>
 <p>For more details, please refer to the
-<a href="https://github.com/mtymek/expressive-config-manager#expressive-configuration-manager">Config Manager Documentation</a>.</p></div>
+<a href="https://github.com/mtymek/expressive-config-manager#expressive-configuration-manager">Config Manager Documentation</a>.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../using-a-base-path/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../setting-locale-depending-routing-parameter/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
