--- a/cookbook/route-specific-pipeline/index.html
+++ b/cookbook/route-specific-pipeline/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../common-prefix-for-routes/">
+                        <a rel="prev" href="../common-prefix-for-routes/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../custom-404-page-handling/">
+                        <a rel="next" href="../custom-404-page-handling/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -633,7 +633,20 @@ answer is that the syntax is exactly the same!</p>
             'priority' =&gt; 100,
         ],
     ],
-];</code></pre></div>
+];</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../common-prefix-for-routes/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../custom-404-page-handling/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
