--- a/cookbook/setting-locale-depending-routing-parameter/index.html
+++ b/cookbook/setting-locale-depending-routing-parameter/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../modular-layout/">
+                        <a rel="prev" href="../modular-layout/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../setting-locale-without-routing-parameter/">
+                        <a rel="next" href="../setting-locale-without-routing-parameter/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -608,7 +608,20 @@ middleware:</p>
         ],
         /* ... */
     ],
-];</code></pre></div>
+];</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../modular-layout/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../setting-locale-without-routing-parameter/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
