--- a/cookbook/setting-locale-without-routing-parameter/index.html
+++ b/cookbook/setting-locale-without-routing-parameter/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../setting-locale-depending-routing-parameter/">
+                        <a rel="prev" href="../setting-locale-depending-routing-parameter/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../debug-toolbars/">
+                        <a rel="next" href="../debug-toolbars/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -662,7 +662,20 @@ class RedirectActionFactory
             $container-&gt;get(UrlHelper::class)
         );
     }
-}</code></pre></div>
+}</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../setting-locale-depending-routing-parameter/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../debug-toolbars/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
