--- a/cookbook/using-custom-view-helpers/index.html
+++ b/cookbook/using-custom-view-helpers/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../custom-404-page-handling/">
+                        <a rel="prev" href="../custom-404-page-handling/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../using-zend-form-view-helpers/">
+                        <a rel="next" href="../using-zend-form-view-helpers/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -487,7 +487,20 @@ three top-level keys:</p>
 including aliases, invokables, factories, and abstract factories to define how
 helpers are named and created.
 <a href="http://framework.zend.com/manual/current/en/modules/zend.view.helpers.advanced-usage.html#zend-view-helpers-advanced-usage">See the zend-view custom helpers documentation</a>
-for information on how to populate this configuration.</p></div>
+for information on how to populate this configuration.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../custom-404-page-handling/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../using-zend-form-view-helpers/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
