--- a/cookbook/using-zend-form-view-helpers/index.html
+++ b/cookbook/using-zend-form-view-helpers/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../using-custom-view-helpers/">
+                        <a rel="prev" href="../using-custom-view-helpers/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../using-a-base-path/">
+                        <a rel="next" href="../using-a-base-path/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -694,7 +694,20 @@ class FormHelpersMiddlewareFactory
   configuration registrations for all components in the same factory.</li>
 <li>If you chose to use middleware, do all helper configuration registrations for
   all components in the same middleware.</li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../using-custom-view-helpers/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../using-a-base-path/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
