--- a/features/application/index.html
+++ b/features/application/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../getting-started/skeleton/">
+                        <a rel="prev" href="../../getting-started/skeleton/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../container/intro/">
+                        <a rel="next" href="../container/intro/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -664,7 +664,20 @@ signature:</p>
 <pre class="codehilite"><code class="language-php">public function run(
     ServerRequestInterface $request = null,
     ResponseInterface $response = null
-);</code></pre></div>
+);</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../getting-started/skeleton/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../container/intro/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
