--- a/features/container/factories/index.html
+++ b/features/container/factories/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../intro/">
+                        <a rel="prev" href="../intro/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../zend-servicemanager/">
+                        <a rel="next" href="../zend-servicemanager/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -798,7 +798,20 @@ the <code>TwigExtension</code> instance (assuming the router was found).</p>
 <code>Zend\View\HelperPluginManager</code> instance (either pulled from the container, or
 instantiated directly). It injects the helper plugin manager with custom url and
 serverurl helpers, <code>Zend\Expressive\ZendView\UrlHelper</code> and
-<code>Zend\Expressive\ZendView\ServerUrlHelper</code>, respetively.</p></div>
+<code>Zend\Expressive\ZendView\ServerUrlHelper</code>, respetively.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../intro/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../zend-servicemanager/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
