--- a/features/container/intro/index.html
+++ b/features/container/intro/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../application/">
+                        <a rel="prev" href="../../application/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../factories/">
+                        <a rel="next" href="../factories/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -517,7 +517,20 @@ typehint, or where we want to imply specific configuration is necessary (e.g.,
 <a href="http://filp.github.io/whoops/">Whoops</a> requires specific configuration to
 work correctly with Expressive, and thus we do not want a generic service name
 for it). We try to keep these to a minimum, however.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../application/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../factories/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
