--- a/features/container/zend-servicemanager/index.html
+++ b/features/container/zend-servicemanager/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../factories/">
+                        <a rel="prev" href="../factories/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../pimple/">
+                        <a rel="next" href="../pimple/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -702,7 +702,20 @@ like this:</p>
 
 <p>Using the above approach allows you to keep the bootstrap file minimal and
 agnostic of environment. (Note: you can take a similar approach with
-the application configuration.)</p></div>
+the application configuration.)</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../factories/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../pimple/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
