--- a/features/emitters/index.html
+++ b/features/emitters/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../helpers/body-parse/">
+                        <a rel="prev" href="../helpers/body-parse/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../cookbook/common-prefix-for-routes/">
+                        <a rel="next" href="../../cookbook/common-prefix-for-routes/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -501,7 +501,20 @@ emitter will likely not work for you.</p>
 
 
 <p>As a stack, execution is in LIFO (last in, first out) order; the first emitter
-on the stack will be evaluated last.</p></div>
+on the stack will be evaluated last.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../helpers/body-parse/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../cookbook/common-prefix-for-routes/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
