--- a/features/error-handling/index.html
+++ b/features/error-handling/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../template/zend-view/">
+                        <a rel="prev" href="../template/zend-view/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../helpers/intro/">
+                        <a rel="next" href="../helpers/intro/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -591,7 +591,20 @@ container implementations to simplify setup.</p>
 <ul>
 <li>For the <code>TemplatedErrorHandler</code>, use <a href="../container/factories/#templatederrorhandlerfactory"><code>Zend\Expressive\Container\TemplatedErrorHandlerFactory</code></a>.</li>
 <li>For the <code>WhoopsErrorHandler</code>, use <a href="../container/factories/#whoopserrorhandlerfactory"><code>Zend\Expressive\Container\WhoopsErrorHandlerFactory</code></a>.</li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../template/zend-view/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../helpers/intro/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
