--- a/features/helpers/body-parse/index.html
+++ b/features/helpers/body-parse/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../server-url-helper/">
+                        <a rel="prev" href="../server-url-helper/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../emitters/">
+                        <a rel="next" href="../../emitters/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -646,7 +646,20 @@ middleware using <code>clearStrategies()</code>:</p>
 
 <p>Note: if you do this, <strong>all</strong> strategies will be removed! As such, we recommend
 doing this only immediately before registering any custom strategies you might
-be using.</p></div>
+be using.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../server-url-helper/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../emitters/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
