--- a/features/helpers/intro/index.html
+++ b/features/helpers/intro/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../error-handling/">
+                        <a rel="prev" href="../../error-handling/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../url-helper/">
+                        <a rel="next" href="../url-helper/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -486,7 +486,20 @@ may integrate features or simply provide standalone benefits.</p>
 <p>If you started your project using the Expressive skeleton package, the helpers
 are already installed.</p>
 <p>If not, you can install them as follows:</p>
-<pre class="codehilite"><code class="language-bash">$ composer require zendframework/zend-expressive-helpers</code></pre></div>
+<pre class="codehilite"><code class="language-bash">$ composer require zendframework/zend-expressive-helpers</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../error-handling/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../url-helper/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
