--- a/features/router/interface/index.html
+++ b/features/router/interface/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../intro/">
+                        <a rel="prev" href="../intro/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../uri-generation/">
+                        <a rel="next" href="../uri-generation/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -720,7 +720,20 @@ class RouteResult
 }</code></pre>
 
 
-<p>Typically, only those implementing routers will interact with this class.</p></div>
+<p>Typically, only those implementing routers will interact with this class.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../intro/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../uri-generation/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
