--- a/features/router/intro/index.html
+++ b/features/router/intro/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../container/aura-di/">
+                        <a rel="prev" href="../../container/aura-di/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../interface/">
+                        <a rel="next" href="../interface/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -521,7 +521,20 @@ and any substitutions you want to make:</p>
 <li><a href="../aura/">Aura.Router</a></li>
 <li><a href="../fast-route/">FastRoute</a></li>
 <li><a href="../zf2/">zend-mvc Router</a></li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../container/aura-di/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../interface/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
