--- a/features/router/piping/index.html
+++ b/features/router/piping/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../result-observers/">
+                        <a rel="prev" href="../result-observers/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../aura/">
+                        <a rel="next" href="../aura/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -608,7 +608,20 @@ middleware, it can never be invoked.</p>
 <p>If you use the provided <code>Zend\Expressive\Container\ApplicationFactory</code> for
 retrieving your <code>Application</code> instance, you can do this by defining pre- and
 post-pipeline middleware, and the factory will ensure everything is registered
-correctly.</p></div>
+correctly.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../result-observers/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../aura/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
