--- a/features/router/uri-generation/index.html
+++ b/features/router/uri-generation/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../interface/">
+                        <a rel="prev" href="../interface/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../result-observers/">
+                        <a rel="next" href="../result-observers/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -547,7 +547,20 @@ router instance:</p>
 <p>For this to work, you'll need to compose the router instance in any class that
 requires the URI generation facility. Inject the
 <code>Zend\Expressive\Router\RouterInterface</code> service in these situations.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../interface/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../result-observers/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
