--- a/getting-started/features/index.html
+++ b/getting-started/features/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../..">
+                        <a rel="prev" href="../..">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../standalone/">
+                        <a rel="next" href="../standalone/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -627,7 +627,20 @@ early, by capturing the response before returning it:</p>
   rules that map to them.</li>
 <li><em>You</em> get to control the workflow of your application by deciding the order in
   which middleware is queued.</li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../.."><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../standalone/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
