--- a/getting-started/skeleton/index.html
+++ b/getting-started/skeleton/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../standalone/">
+                        <a rel="prev" href="../standalone/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../features/application/">
+                        <a rel="next" href="../../features/application/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -714,7 +714,20 @@ Expressive:</p>
 <li><a href="../../features/router/intro/">Routing</a></li>
 <li><a href="../../features/template/intro/">Templating</a></li>
 <li><a href="../../features/error-handling/">Error Handling</a></li>
-</ul></div>
+</ul>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../standalone/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../features/application/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
