--- a/getting-started/standalone/index.html
+++ b/getting-started/standalone/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../features/">
+                        <a rel="prev" href="../features/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../skeleton/">
+                        <a rel="next" href="../skeleton/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -575,7 +575,20 @@ a single route. From here, you may want to read up on:</p>
 <li><a href="../../features/template/intro/">Templating</a></li>
 <li><a href="../../features/error-handling/">Error Handling</a></li>
 </ul>
-<p>Additionally, we have more <a href="../../reference/usage-examples/">use case examples</a>.</p></div>
+<p>Additionally, we have more <a href="../../reference/usage-examples/">use case examples</a>.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../features/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../skeleton/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
