--- a/index.html
+++ b/index.html
@@ -420,12 +420,12 @@
                 </li>
                 
                     <li class="disabled">
-                        <a rel="next" >
+                        <a rel="prev" >
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="getting-started/features/">
+                        <a rel="next" href="getting-started/features/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -495,7 +495,20 @@ framework for PHP, with the following features:</p>
 <p>Essentially, Expressive allows <em>you</em> to develop using the tools <em>you</em> prefer,
 and provides minimal structure and facilities to ease your development.</p>
 <p><a href="getting-started/features/">Keep reading</a>, and get started writing your first
-middleware application today!</p></div>
+middleware application today!</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous disabled">
+      <a rel="prev" ><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="getting-started/features/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
@@ -548,5 +561,5 @@ middleware application today!</p></div>
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-01-23 17:34:45.299210
+Build Date UTC : 2016-01-23 18:08:25.538341
 -->
