--- a/cookbook/common-prefix-for-routes/index.html
+++ b/cookbook/common-prefix-for-routes/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../../features/emitters/">
+                        <a rel="prev" href="../../features/emitters/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../route-specific-pipeline/">
+                        <a rel="next" href="../route-specific-pipeline/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -504,7 +504,20 @@ $app-&gt;run();</code></pre>
 
 <p>The above works, because every <code>Application</code> instance is itself middleware, and, more specifically,
 an instance of <a href="https://github.com/zendframework/zend-stratigility/blob/master/doc/book/middleware.md">Stratigility's <code>MiddlewarePipe</code></a>,
-which provides the ability to compose middleware.</p></div>
+which provides the ability to compose middleware.</p>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../../features/emitters/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../route-specific-pipeline/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
