--- a/cookbook/using-a-base-path/index.html
+++ b/cookbook/using-a-base-path/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../using-zend-form-view-helpers/">
+                        <a rel="prev" href="../using-zend-form-view-helpers/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../modular-layout/">
+                        <a rel="next" href="../modular-layout/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -629,7 +629,20 @@ your <code>config/autoload/templates.global.php</code>:</p>
 echo $basePathHelper('/icons/favicon.ico');
 
 // or, from zend-view's PhpRenderer:
-echo $this-&gt;basePath('/icons/favicon.ico');</code></pre></div>
+echo $this-&gt;basePath('/icons/favicon.ico');</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../using-zend-form-view-helpers/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../modular-layout/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
