--- a/cookbook/using-routed-middleware-class-as-controller/index.html
+++ b/cookbook/using-routed-middleware-class-as-controller/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../debug-toolbars/">
+                        <a rel="prev" href="../debug-toolbars/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../reference/usage-examples/">
+                        <a rel="next" href="../../reference/usage-examples/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -707,7 +707,20 @@ class AlbumPage extends AbstractPage
 }</code></pre>
 
 
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../debug-toolbars/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../reference/usage-examples/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
