--- a/features/container/pimple/index.html
+++ b/features/container/pimple/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../zend-servicemanager/">
+                        <a rel="prev" href="../zend-servicemanager/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../aura-di/">
+                        <a rel="next" href="../aura-di/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -551,7 +551,20 @@ $app-&gt;run();</code></pre>
 <code>Zend\Expressive\FinalHandler</code>, one for development and one for production.
 You will need to add logic to your file to determine which definition to
 provide; this could be accomplished via an environment variable.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../zend-servicemanager/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../aura-di/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
