--- a/features/router/fast-route/index.html
+++ b/features/router/fast-route/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../aura/">
+                        <a rel="prev" href="../aura/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../zf2/">
+                        <a rel="next" href="../zf2/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -715,7 +715,20 @@ use Interop\Container\Pimple\PimpleInterop as Pimple;
 $container = new Pimple();
 $container['FastRoute\RouteCollector'] = new FastRouteCollectorFactory();
 $container['FastRoute\RouteDispatcher'] = new FastRouteDispatcherFactory();
-$container['Zend\Expressive\Router\RouterInterface'] = new RouterFactory();</code></pre></div>
+$container['Zend\Expressive\Router\RouterInterface'] = new RouterFactory();</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../aura/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../zf2/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
