--- a/features/router/result-observers/index.html
+++ b/features/router/result-observers/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../uri-generation/">
+                        <a rel="prev" href="../uri-generation/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../piping/">
+                        <a rel="next" href="../piping/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -655,7 +655,20 @@ functionality is already present in the <a href="https://github.com/zendframewor
 package, and, if you started with the Expressive skeleton, may already
 be installed by default!</p>
 <p>See the <a href="../../helpers/intro/">helpers documentation</a> for more information.</p>
-</blockquote></div>
+</blockquote>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../uri-generation/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../piping/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
