--- a/features/router/zf2/index.html
+++ b/features/router/zf2/index.html
@@ -419,12 +419,12 @@
                 </li>
                 
                     <li >
-                        <a rel="next" href="../fast-route/">
+                        <a rel="prev" href="../fast-route/">
                             <i class="fa fa-arrow-left"></i> Previous
                         </a>
                     </li>
                     <li >
-                        <a rel="prev" href="../../template/intro/">
+                        <a rel="next" href="../../template/intro/">
                             Next <i class="fa fa-arrow-right"></i>
                         </a>
                     </li>
@@ -683,7 +683,20 @@ use Interop\Container\Pimple\PimpleInterop;
 
 $container = new PimpleInterop();
 $container['Zend\Mvc\Router\Http\TreeRouteStackFactory'] = new TreeRouteStackFactory();
-$container['Zend\Expressive\Router\RouterInterface'] = new RouterFactory();</code></pre></div>
+$container['Zend\Expressive\Router\RouterInterface'] = new RouterFactory();</code></pre>
+
+<hr />
+
+<nav>
+  <ul class="pager">
+    <li class="previous">
+      <a rel="prev" href="../fast-route/"><i class="fa fa-arrow-left"></i> Previous</a>
+    </li>
+    <li class="next">
+      <a rel="next" href="../../template/intro/">Next <i class="fa fa-arrow-right"></i></a>
+    </li>
+  </ul>
+</nav></div>
         
     </div>
 
